# model_analyst

./: .env.example  .gitignore  README.md  main.py  need.md  pyproject.toml  requirements.txt
deploy/: model-analysis-api.service.example  nginx.model-analysis-api.conf.example
docs/: API.md  metrics.md
scripts/: blender_analyze_model.py
src/model_analysis/analyzers/: native_meshlib.py
src/model_analysis/api/: app.py  schemas.py
src/model_analysis/core/: config.py
src/model_analysis/expert/: skill.py
src/model_analysis/services/: analysis_runner.py  downloader.py  quality.py  task_store.py
tests/: smoke_local_models.py  test_pbr_detection.py  test_s3_download.py  test_summary_parameters.py
