[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "model-analysis-api"
version = "1.1.0"
description = "FastAPI service for 3D model quality, material texture, and expert analysis."
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "httpx",
  "boto3",
  "pydantic",
  "python-dotenv",
  "trimesh",
  "numpy",
  "meshlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
